samples/_failures_safe/1761364996_892d80_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6c055821.c: In function ‘main’:
./samples/SAFE/__tmp_6c055821.c:185:45: error: missing terminating ' character
  185 |     if (len > 0 && input_buffer[len - 1] == '\n
      |                                             ^~~
./samples/SAFE/__tmp_6c055821.c:185:5: error: expected expression at end of input
  185 |     if (len > 0 && input_buffer[len - 1] == '\n
      |     ^~
./samples/SAFE/__tmp_6c055821.c:185:5: error: expected declaration or statement at end of input
